Python/PythonAWS/templates/ec2-steam-win-base.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: A very basic EC2 instance with Steam CMD.
Parameters:
  InstanceType:
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t3.small
      - t3.medium
    Description: 
      EC2 Instance Type
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Name of an existing EC2 KeyPair
  ServiceName:
    Type: String
    Description: The name of the service.
Mappings:
  RegionMap:
    us-west-2:
      # Windows Server 2019 Base
      AMI: ami-0c1ee26e489972734
Resources:
  EC2Instance: 
    Type: AWS::EC2::Instance
    # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/cfn-helper-scripts-reference.html
    Metadata:
      AWS::CloudFormation::Init:
        configSets:
          default:
            - 01_createPath
            - 02_downloadFile
        01_createPath:
          commands:
            1_makeDir:
              command: mkdir "C:\\SteamCMD"
        02_downloadFile:
          sources:
            C:\\SteamCMD: " https://steamcdn-a.akamaihd.net/client/installer/steamcmd.zip"
    Properties:
      KeyName: !Ref KeyName
      ImageId: 
        Fn::FindInMap:
        - RegionMap
        - !Ref AWS::Region
        - AMI
      InstanceType: !Ref InstanceType
      BlockDeviceMappings:
        - DeviceName: "/dev/sda1"
          Ebs:
            VolumeSize: 40
      Tags:
        - Key: "Name"
          Value: !Ref ServiceName
      SecurityGroups:
        - !Ref BasicSecurityGroup
      UserData: 
        Fn::Base64:
          !Sub |
            <script>
            cfn-init.exe -v -s ${AWS::StackName} -r EC2Instance --region ${AWS::Region}
            </script>
    # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-attribute-creationpolicy.html
    # CreationPolicy:
    #   ResourceSignal:
    #     Count: 1
    #     Timeout: "PT15M"
  BasicSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable RDP and SteamCMD access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3389
          ToPort: 3389
          CidrIp: 0.0.0.0/0
        - IpProtocol: udp
          FromPort: 27000
          ToPort: 27100
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 27000
          ToPort: 27100
          CidrIp: 0.0.0.0/0
